--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-  <h1>Test of localStorage limits/quota. (Forked from <a href="https://arty.name/localstorage.html">arty.name</a></h1>
+  <h1>Test of localStorage limits/quota. (Forked from <a href="https://arty.name/localstorage.html">arty.name</a>)</h1>
 <h2>This page tries to detect how many characters your browser may save to window.localStorage. Accuracy is 2 first digits.</h2>
 
-<p><strong>Important update:</strong> You can get much more information in <a href="http://www.html5rocks.com/en/tutorials/offline/quota-research/">this research on browser storage</a>.</p>
 
 <p>Please sit back and relax™ while this script tests your browser. </p>
 
